<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_me_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >

    <Button
        android:id="@+id/b_next_recipe"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/Next" />

    <FrameLayout
        android:id="@+id/part1_container"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/b_next_recipe"
        android:scaleType="centerInside" />

    <FrameLayout
        android:id="@+id/part2_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/part1_container"
        android:scaleType="centerInside" />


</RelativeLayout>

